# megstore

./: .buildinfo  .gitignore  .pyre_configuration  CHANGELOG.md  Makefile  README.md  changelog.html  genindex.html  index.html  megstore.html  megstore.indexed.jsonline.html  megstore.indexed.msgpack.html  megstore.indexed.txt.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements-msgpack.txt  requirements.txt  search.html  searchindex.js
.doctrees/: changelog.doctree  environment.pickle  index.doctree  megstore.doctree  megstore.indexed.jsonline.doctree  megstore.indexed.msgpack.doctree  megstore.indexed.txt.doctree  readme.doctree
.github/workflows/: publish-docs.yml  run-tests.yml
_modules/: index.html
_modules/megstore/indexed/: jsonline.html  msgpack.html  txt.html
_sources/: megstore.rst.txt
docs/: conf.py  index.rst  indexed.md  megstore.indexed.jsonline.rst  megstore.indexed.msgpack.rst  megstore.indexed.txt.rst  requirements.txt
megstore/: __init__.py  errors.py  interface.py
megstore/indexed/: __init__.py  base.py  jsonline.py  msgpack.py  txt.py
megstore/utils/: __init__.py  compat_json.py  compat_msgpack.py
tests/: test_compat_json.py  test_interface.py
tests/indexed/: test_base.py  test_jsonline.py  test_msgpack.py  test_txt.py
