[project]
name = "megstore"
version = "0.0.1"
description = "Common Formats. Uncommon Speed."
readme = "README.md"
authors = [
    { name = "megvii-reng", email = "megvii-reng@googlegroups.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "megfile",
    "orjson",
]

[project.optional-dependencies]
msgpack = [
    "msgpack>=0.6.0",
    "msgpack-numpy>=0.4.6",
]

[dependency-groups]
doc = [
    "Sphinx>=7.3.7; python_version >= '3.10'",
    "Sphinx; python_version < '3.10'",
    "m2r2",
    "sphinx-rtd-theme~=2.0",
    "sphinxcontrib-jquery",
    "sphinx-click",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock>3.6.0",
    "pytest-socket",
    "pytest-retry",
    "moto[s3]>=5.0.0",
    "cryptography>=3.3.2",
    "mutmut",
    "pyfakefs>=4.5",
    "mock",
    "requests-mock",
]
lint = [
    "ruff",
    "black",
]
typecheck = [
    "msgspec>=0.19.0; python_version >= '3.13'",
    "pytype",
    "pyre-check~=0.9.22",
    "bandit",
    "bandit-sarif-formatter",
]
dev = [
    "megstore[msgpack]",
    {include-group = "doc"},
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typecheck"},
]

[project.urls]
Homepage = "https://github.com/megvii-research/megstore"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "megstore"
module-root = ""

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = [
    "E402", # imports not on top of file
    "PGH004", # Use specific rule codes when using noqa
]
select = ["E", "F", "W"]
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "F811",  # redefinition of unused name
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.pytype]
# Space-separated list of files or directories to exclude.
exclude = [
    "tests/"
]
# Space-separated list of files or directories to process.
inputs = [
    "./megstore"
]
# Keep going past errors to analyze as many files as possible.
keep_going = true

# All pytype output goes here.
output = ".pytype_output"

# Paths to source code directories, separated by ':'.
pythonpath = "."

# Comma separated list of error names to ignore.
disable = [
    "pyi-error"
]
# Don't report errors.
report_errors = true

# Experimental: solve unknown types to label with structural types.
protocols = false

# Experimental: Only load submodules that are explicitly imported.
strict_import = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover"
]

[tool.mutmut]
paths_to_mutate = "megstore/"
backup = false
runner = "pytest --cov=megstore --cov-config pyproject.toml tests/"
tests_dir = "tests/"
dict_synonyms = "Struct,NamedStruct"
